--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "nuxt": "^3.7.1",
     "prettier": "3.0.3"
+  },
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "date-fns": "^2.30.0"
   }
 }
